--- a/PC.css
+++ b/PC.css
@@ -1,30 +1,59 @@
 .main--container {
-    max-width: none;
-    height: 76.7vh;
-    padding-top: 7rem;
+    max-width: 80%;
+    height: 93vh;
+    padding-top: 2rem;
     display: flex;
     justify-content: space-evenly;
+    padding-bottom: 1rem;
 }
 .container-cuadrado {
-    width: 30%;
-    height: 52vh;
+    justify-content: space-evenly;
+    width: 36%;
+    padding-top: 1rem;
+    height: 40vh;
     order: 1;
-    padding-top: 7rem;
     border-radius: 10px;
     box-shadow: 0px 0px 15px 2px #000000;
 }
+.container-cuadrado img {
+    width: 7rem;
+}
 .triángulo {
-    width: 30%;
-    order: 2;
-    height: 52vh;
+    padding-top: 1rem;
+    width: 36%;
+    order: 3;
+    justify-content: space-evenly;
+    height: 40vh;
     border-radius: 10px;
     box-shadow: 0px 0px 15px 2px #000000;
+}
+.triángulo img {
+    width: 10rem;
 }  
 .circulo {
-    width: 30%;
-    order: 3;
-    padding-top: 7rem;
-    height: 52vh;
+    justify-content: space-evenly;
+    width: 36%;
+    order: 2;
+    padding-top: 1rem;
+    height: 40vh;
     border-radius: 10px;
     box-shadow: 0px 0px 15px 2px #000000;
+}
+.circulo img {
+    width: 6rem;
+}
+.triángulo-isósceles {
+    width: 36%;
+    order: 4;
+    padding-top: 1rem;
+    height: 40vh;
+    justify-content: space-evenly;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px 2px #000000;
+}
+h2 {
+    font-size: 2.5rem;
+}
+p {
+    font-size: 1.2rem;
 }
